--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -4,6 +4,15 @@
   height: 100%;
   margin: 0 auto;
   width: 96%;
+  @include media(tablet) {
+  
+  }
+  @include media(mediumDesktop) {
+  
+  }         
+  @include media(largeDesktop) {
+  
+  }   
   @include clearfix();
   .form__steps {
     display: block;
@@ -17,7 +26,17 @@
     width: 100%;
     .form__content {
       float: left;
+      padding-left: 4%;
       width: 100%;
+      @include media(tablet) {
+        padding-left: 2%;
+      }
+      @include media(mediumDesktop) {
+        padding-left: 0;
+      }         
+      @include media(largeDesktop) {
+        padding-left: 0;
+      }       
     }
   } // .form__container
 }
