--- a/front-end/src/app/forms/form-99/type/type.component.scss
+++ b/front-end/src/app/forms/form-99/type/type.component.scss
@@ -7,33 +7,46 @@
     float: left;
     height: 100%;
     width: 100%;
-    .reasons-list {
+    .type-list {
       list-style-type: none;
       position: relative;
       margin-bottom: 20px;
       margin-left: auto;
       margin-right: auto;
       z-index: 0;
-      .reasons-item {
+      .type-item {
         background-color: $alto;
         color: $black;
+        font-size: 0.85em;
         padding-bottom: 15px;
         padding-top: 15px;
         display: block;
         position: relative;
         float: left;
-        width: 100%;
+        width: 94%;
         &:hover {
           background-color: $dustyGray;
         }
         &.selected {
           background-color: $dustyGray;
         }
-        .reasons-item__box {
+        @include media(tablet) {
+          font-size: 1em;
+          width: 97%;
+        }
+        @include media(mediumDesktop) {
+          font-size: 1em;
+          width: 100%;
+        }         
+        @include media(largeDesktop) {
+          font-style: 1em;
+          width: 100%;
+        }         
+        .type-item__box {
           display: inline-block;
           width: auto;
-          .reasons-item__box--top,
-          .reasons-item__box--bottom {
+          .type-item__box--top,
+          .type-item__box--bottom {
             display: block;
             width: 100%;
           }
@@ -45,7 +58,7 @@
           input[type='radio'] {
             position: absolute;
             visibility: hidden;
-            &:checked ~.reason-radio {
+            &:checked ~.type-radio {
             &:before {
               background: $black;
             }
@@ -54,7 +67,7 @@
               color: $white;
             }
           }
-          .reason-radio {
+          .type-radio {
             display: block;
             position: absolute;
             border: 5px solid $silverChalice;
@@ -85,7 +98,7 @@
               background: #0DFF92;
             }
           }
-          .reason-text {
+          .type-text {
             display: inline-block;
             margin: 10px auto;
             position: relative;
@@ -96,8 +109,8 @@
             z-index: 0;
             -webkit-transition: all 0.25s linear;
           }
-        } // .reasons-item__box
-        .reason__info {
+        } // .type-item__box
+        .type__info {
           cursor: pointer;
           display: inline-block;
           padding-left: 10px;
@@ -117,10 +130,23 @@
             }
           }
         }
-      } // .reasons-item
-    } // .reasons-list
+      } // .type-item
+    } // .type-list
     .forms__btn-container {
       margin: 0 auto;
+      padding: 0;
+      width: 80%;
+      @include media(tablet) {
+        margin: 0;
+        padding: 0;
+        width: 95%;
+      }
+      @include media(mediumDesktop) {
+        width: 100%;
+      }         
+      @include media(largeDesktop) {
+        width: 100%;
+      }       
       .btn-container-row {
         @include clearfix();
         border-bottom: 1px solid $dustyGray;
