--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -43,7 +43,25 @@
       <form [formGroup]="frmSignee" (ngSubmit)="doSubmitForm()">
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--6">
-            <h4>Signee*</h4>
+            <ng-template #tipContent>
+              FEC Form 9 must be signed by the person making the electioneering communication, who is making a verified certification under penalty of perjury that the statement is correct.             
+            </ng-template>            
+            <h4>
+              Signee*
+              <button 
+                type="button" 
+                class="btn btn-info"
+                [ngbTooltip]="tipContent"
+                #t2="ngbTooltip"
+                (click)="toggleToolTip(t2)"
+                triggers="manual"
+                tooltipClass="custom-tooltip-class"
+                placement="right"
+              >
+                <i class="info-icon" aria-hidden="true"></i>
+                <span class="sr-only">Click here for more information</span>
+              </button>              
+            </h4>
             <div>
               <label>
                 <input
