--- a/front-end/src/app/forms/form-99/form/form.component.html
+++ b/front-end/src/app/forms/form-99/form/form.component.html
@@ -1,18 +1,27 @@
 <div class="forms__wizard">
-  <div class="form__steps">
-    <app-steps
-      [steps]="[
-        {text: 'Type', step: 'step_1'},
-        {text: 'Form', step: 'step_2'},
-        {text: 'Preview', step: 'step_3'},
-        {text: 'Sign', step: 'step_4'},
-        {text: 'Submit', step: 'step_5'}
-      ]"
-      [current_step]="currentStep"
-    >
-    </app-steps>
-  </div>
-  <div class="form__container">
+  <div 
+    class="form__alerts"
+    [ngClass]="showValidateBar === true ? 'show-alerts' : ''"
+  >
+    <app-validate></app-validate>
+  </div>    
+  <div 
+    class="form__container"
+    [ngClass]="showValidateBar === true ? 'show-alerts' : ''"
+  >
+    <div class="form__steps">
+      <app-steps
+        [steps]="[
+          {text: 'Type', step: 'step_1'},
+          {text: 'Form', step: 'step_2'},
+          {text: 'Preview', step: 'step_3'},
+          {text: 'Sign', step: 'step_4'},
+          {text: 'Submit', step: 'step_5'}
+        ]"
+        [current_step]="currentStep"
+      >
+      </app-steps>
+    </div>    
     <div class="form__content" *ngIf="!isLoading">
       <div
         class="form__step"
@@ -50,5 +59,5 @@
         ></app-submit>
       </div>
     </div>
-  </div>
-</div>
+  </div> <!-- ./form__container -->
+</div> <!-- ./forms__wizard -->
