--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -1,19 +1,44 @@
 @import '../../../shared/scss/global';
 
 .forms__wizard {
-  height: 100%;
-  margin: 0 auto;
-  width: 96%;
-  @include media(tablet) {
-  
-  }
-  @include media(mediumDesktop) {
-  
-  }         
-  @include media(largeDesktop) {
-  
-  }   
-  @include clearfix();
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  width: 100%;  
+  .form__alerts {
+    background-color: $bombay;
+    &.show-alerts {
+      padding-left: 0;
+      @include media(tablet) {
+        padding-left: 0;
+      }
+      @include media(mediumDesktop) {
+        width: 250px;         
+      }         
+      @include media(largeDesktop) {
+        width: 250px; 
+      }         
+    }    
+    @include media(tablet) {
+      display: block;
+      height: 40px;
+      width: 100%;
+    }
+    @include media(mediumDesktop) {
+      display: inline-block;
+      float: left;
+      min-height: 100%;
+      position: relative;
+      width: 100px;      
+    }         
+    @include media(largeDesktop) {
+      display: inline-block;
+      float: left;
+      min-height: 100%;
+      position: relative;
+      width: 100px;      
+    }             
+  }  
   .form__steps {
     display: block;
     margin: 0 auto;
@@ -21,12 +46,27 @@
     @include clearfix();
   }
   .form__container {
-    display: block;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    float: left;
+    margin-left: 5px;
+    width: 90%;
+    &.show-alerts {
+      padding-left: 0;
+      @include media(tablet) {
+        padding-left: 0;
+      }
+      @include media(mediumDesktop) {
+        margin-left: 5px;
+        width: 76%;         
+      }         
+      @include media(largeDesktop) {
+        margin-left: 5px;
+        width: 76%; 
+      }         
+    }      
     .form__content {
-      float: left;
-      width: 100%;      
+      width: 100%;    
     }
   } // .form__container
+  @include clearfix();
 }
